// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile > should have a snapshot match for a clear tile 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1n3uo6c-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  This is an clear tile.
</button>
`;

exports[`Tile > should have a snapshot match for a colored tile 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-4x02tf-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  This is a colored tile.
</button>
`;
